[tool.poetry]
name = "poc_pytest"
version = "0.1.0"
description = "A basic poc for pytest, poetry and pyenv"
authors = ["Emax <maxadau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
